<resources>
    <string name="app_name">ZamalekSC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Aboutt">
If you have any questions, concerns, or suggestions, don’t hesitate to let me know or contact me  </string>
    <string name="about2">email: </string>
    <string name="about3">Ahmed_pop219490@yahoo.com
</string>
    <string name="about4">I am looking forward to hearing from you</string>
    <string name="action_settings">Settings</string>
    <string name="TextStringZamalekbar">Zamalek Club</string>
    <string name="about">About</string>
    <string name="textofMatchZamalek">"قنوات البث المباشر "</string>
    <string name="MemoriesZamalek">"The best Memories in Stadium"</string>
    <string name="Newsss">"News"</string>
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="itemMusic">
        <item>صرخة العشرين
</item>
        <item>ياتيشرت العمر يا ابيض
</item>
        <item>مشجع مش نزيل </item>
        <item>في التالتة يمين </item>
        <item>أصل الحكاية </item>
        <item>يا اسم مالي الكون </item>
        <item> الكورة للجماهير </item>
        <item>في كل استاد غنينا </item>
        <item>اخوات في الدم ليوم الدين </item>
        <item>100 سنة معاه </item>
        <item>اعظم كيان </item>
        <item>حب مالوش نهاية </item>
        <item>شعاره ملكي </item>
        <item>عيشت الامجاد </item>
        <item>حلم البداية </item>
        <item>بطولة ياربي </item>
        <item> اسلوب حياه </item>
        <item> اسطورة الجماهير </item>
        <item> حرب نهاية الزمان </item>
        <item>بفتكرك </item>
        <item>اللي شافك من زمان </item>
        <item>حكاية ثورة </item>
        <item>فك قيود الحرية </item>
        <item>علي الفوز الليلة حارب </item>
        <item>علمك عالي </item>
        <item>زمالك حبك حرية </item>
        <item>اوفياء </item>
        <item>شهداء الزمالك </item>
        <item>اولتراس صوت الحياه </item>
        <item>فلسطين الارض عربية </item>
        <item>غالي وافديه بحياتي </item>
        <item>عمري ما هنسي </item>
        <item>عقيدة الفرسان </item>
        <item>شمس الحرية </item>
        <item>سالوني مين اختار </item>
        <item>اسال علي الكيان </item>
        <item>الزمالك ده اعظم نادي </item>
        <item>انصر ياربي الابطال </item>
        <item>نادي الملوك والابطال </item>
        <item>الزمالك هوا الملك </item>
        <item>اي حكاية </item>
        <item>هوا الحياه والروح </item>
        <item>نور كل الحياه </item>
        <item>كلمة بسبع حروف </item>
        <item>عزيز الشافعي 1911 </item>
        <item>احنا معاك يا عميد </item>
        <item>بحبك يا زمالك </item>
        <item>جماهير الزمالك </item>
        <item>راية في البلكونة </item>
        <item>وهيفضل صوتي </item>
        <item>اسياد افريقيا </item>
        <item>الليلة جينا ندعي ونقول ياربي </item>
        <item>No Pasaran</item>
        <item> زملكاوي انا </item>
        <item> يازمالك انت كبير </item>

        <item> يازمالك ياعمري </item>
        <item>افرح .. افرح وغني </item>
        <item>احمد سليمان يازمالك </item>
        <item>مادو .. سنظل اوفياء </item>
        <item> محمد رشدي .. يازمالك </item>
        <item> احنا درعك وسيفك احنا فداك </item>
        <item> بشجع الزمالك </item>
        <item> في الكورفا السود </item>
        <item> احنا العشاق </item>
        <item> عزيز الشافعي .. كان كل طموحي </item>
        <item> شيكا بالا شجعوه </item>
        <item> زمالك حبه مالك قلبي </item>
        <item> عزيز الشافعي .. الزمالك جوة قلبي </item>
        <item> مدرسة الزمالك </item>
        <item> اغنية من فلسطين في حب الزمالك </item>
        <item>جينا ورب الكون دعينا </item>
        <item> تذكرة الموت لي شهداء الزمالك</item>
        <item> احنا الزملكاوية </item>
        <item> شهداء الزمالك </item>
        <item>مادو .. لشهداء الدفاع الجوي </item>
        <item>أغنية اللون الأبيض عشق الطفولة </item>


    </string-array>
</resources>