<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sport"


    tools:context="ZamalekSc.About">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#fdf2f3"
        android:padding="20dp"
        android:textStyle="bold"
        android:id="@+id/textone"
        android:text="@string/Aboutt"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texttwo"
        android:textSize="20dp"
        android:textColor="#fdf2f3"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:layout_below="@id/textone"
        android:text="@string/about2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textthre"
            android:textSize="20dp"
            android:padding="20dp"
            android:textColor="#fdf2f3"
            android:textStyle="bold"
            android:layout_below="@id/texttwo"
            android:text="@string/about3" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textfour"
        android:textSize="20dp"
        android:textColor="#fdf2f3"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:layout_below="@id/textthre"
        android:text="@string/about4" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_below="@+id/textfour"
            android:background="@drawable/dontforget"

            />



    </RelativeLayout>

</FrameLayout>
